// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`show reducers episode list reducer should return correct state after [SHOW] SHOW_EPISODE_LIST_LOAD_FAIL action 1`] = `
Object {
  "data": null,
  "error": null,
  "isLoading": false,
}
`;

exports[`show reducers episode list reducer should return correct state after [SHOW] SHOW_EPISODE_LIST_LOAD_REQUEST action 1`] = `
Object {
  "data": null,
  "error": null,
  "isLoading": true,
}
`;

exports[`show reducers episode list reducer should return correct state after [SHOW] SHOW_EPISODE_LIST_LOAD_SUCCESS action 1`] = `
Object {
  "data": Object {
    "airDate": "2017-04-04",
    "id": 1,
    "image": null,
    "name": "episode name",
  },
  "error": null,
  "isLoading": false,
}
`;

exports[`show reducers show details reducer should return correct state after [SHOW] SHOW_DETAILS_LOAD_FAIL action 1`] = `
Object {
  "data": null,
  "error": "Something bad happened",
  "isLoading": false,
}
`;

exports[`show reducers show details reducer should return correct state after [SHOW] SHOW_DETAILS_LOAD_REQUEST action 1`] = `
Object {
  "data": null,
  "error": null,
  "isLoading": true,
}
`;

exports[`show reducers show details reducer should return correct state after [SHOW] SHOW_DETAILS_LOAD_SUCCESS action 1`] = `
Object {
  "data": Object {
    "airDate": "2017-04-04",
    "id": 1,
    "image": null,
    "name": "episode name",
  },
  "error": null,
  "isLoading": false,
}
`;
